<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finalchallenge_deepsilk</name>
  <version>0.0.0</version>
  <description>Set point generator node for the final challenge</description>
  <maintainer email="jp@todo.todo">jp</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias necesarias para nodos en ROS2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>numpy</depend>

  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
